packages/itwinui-css/src/dialog/dialog.scss
// Copyright (c) Bentley Systems, Incorporated. All rights reserved.
// See LICENSE.md in the project root for license terms and full copyright notice.
@import '../utils/index';

$iui-dialog-width: 380px;
$iui-dialogue-resizable-min-height: 7.75rem; // 7.75rem = 124px = title bar height + margins + button height + partially visible text

@mixin iui-dialog-wrapper {
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  transform: translateX(0); // creates containing block for position: fixed
  z-index: 999;
  isolation: isolate;

  &[data-iui-relative='true'] {
    position: absolute;
  }
}

@mixin iui-dialog {
  z-index: 999;
  isolation: isolate;
  border-radius: var(--iui-border-radius-1);
  box-shadow: var(--iui-shadow-5);
  position: fixed;
  padding: var(--iui-size-s) var(--iui-size-m);
  pointer-events: auto;
  background-color: var(--iui-color-background);
  @media (forced-colors: active) {
    border: 1px solid;
  }

  &:not(.iui-dialog-visible) {
    visibility: hidden;
    opacity: 0;
  }

  transition: visibility var(--iui-duration-0) linear, opacity var(--iui-duration-1) ease-out;
  transition-delay: var(--iui-duration-1), var(--iui-duration-0);

  &.iui-dialog-visible {
    transition-delay: var(--iui-duration-0); // remove delay for entry animation
  }
}

@mixin iui-dialog-default {
  max-width: Max(50%, $iui-dialog-width);
  min-width: Min(100%, $iui-dialog-width);
  max-height: 100vh;
}

@mixin iui-dialog-placement {
  &:not([data-iui-placement]) {
    left: 50%;
    top: 33%;
    transform: translate(-50%, -33%);
  }

  &[data-iui-placement='top-left'] {
    top: 0;
    left: 0;
    margin-left: var(--iui-size-s);
    margin-top: var(--iui-size-m);
  }

  &[data-iui-placement='top-right'] {
    top: 0;
    right: 0;
    margin-right: var(--iui-size-s);
    margin-top: var(--iui-size-m);
  }

  &[data-iui-placement='bottom-left'] {
    bottom: 0;
    left: 0;
    margin-left: var(--iui-size-s);
    margin-bottom: var(--iui-size-m);
  }

  &[data-iui-placement='bottom-right'] {
    bottom: 0;
    right: 0;
    margin-right: var(--iui-size-s);
    margin-bottom: var(--iui-size-m);
  }
}

@mixin iui-dialog-full-page {
  border-radius: 0;
  height: 100vh;
  height: 100dvh;
  width: 100vw;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  will-change: transform;

  &:not(.iui-dialog-visible) {
    transform: translateY(100%);
  }

  @media (prefers-reduced-motion: no-preference) {
    transition: visibility var(--iui-duration-0) linear var(--iui-duration-2),
      opacity var(--iui-duration-0) linear var(--iui-duration-2), transform var(--iui-duration-1) ease-in;

    &.iui-dialog-visible {
      transition: transform var(--iui-duration-2) ease-out;
    }
  }
}

@mixin iui-dialog-draggable {
  display: flex;
  flex-direction: column;
  border: 1px solid var(--iui-color-border);
  min-height: $iui-dialogue-resizable-min-height;
}

@mixin iui-dialog-animation {
  &-enter {
    transform: translateY(100%);
    opacity: 0;
  }

  &-enter-active {
    transform: translateY(0);
    opacity: 1;
  }
}

@mixin iui-dialog-title {
  display: flex;
  align-items: center;
  font-size: inherit;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.5;
  margin-right: auto;
}

@mixin iui-dialog-title-bar {
  display: flex;
  align-items: center;
  margin-bottom: var(--iui-size-s);
  font-size: var(--iui-font-size-3);
}

@mixin iui-dialog-title-bar-filled {
  font-size: var(--iui-font-size-2);
  padding: calc(var(--iui-size-s) * 0.5) var(--iui-size-m);
  margin: calc(0px - var(--iui-size-s)) calc(0px - var(--iui-size-m)) var(--iui-size-s) calc(0px - var(--iui-size-m)); // negative margin to counteract dialog padding
  cursor: grab;
  background-color: var(--iui-color-background-backdrop);
  border-bottom: 1px solid var(--iui-color-border);

  &:active {
    cursor: grabbing;
  }
}

@mixin iui-dialog-content {
  flex-grow: 2;
  margin: 0 calc(0px - var(--iui-size-m));
  padding: 0 var(--iui-size-m);
  overflow-y: auto;
  overflow-y: overlay;
  max-height: calc(100vh - 6.75rem); // 6.75rem = 108px = button height + paddings + bottom bar
}

@mixin iui-dialog-button-bar {
  margin-top: var(--iui-size-s);
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: var(--iui-size-xs);
}

